--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
             <!-- Q2 -->
             <fieldset class="q">
                 <legend>2) What does <strong>MCS</strong> stand for?</legend>
-                <input id="b56-mcs" name="b56-mcs" type="text" placeholder="Type the full name…" required />
-                <small class="help">Accepts “Multicultural Student Center” or “Multicultural Student” (case/spaces ignored).</small>
+                <input id="b56-mcs" name="b56-mcs" type="text" placeholder="Type the full name" required />
             </fieldset>
 
             <!-- Q3 -->
@@ -48,8 +47,7 @@
             <!-- Q4 -->
             <fieldset class="q">
                 <legend>4) How much does the <strong>Tonkotsu Instant Noodles</strong> cost at the Cafeteria?</legend>
-                <input id="b56-noodles" name="b56-noodles" type="text" placeholder="$4.95" required />
-                <small class="help">Accepts $4.95 or 4.95.</small>
+                <input id="b56-noodles" name="b56-noodles" type="text" placeholder="Type the price with decimals" required />
             </fieldset>
 
             <!-- Q5 -->
