--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             <fieldset class="q">
                 <legend>5) What is held weekly in the big conference room in Ohlone Student Life (open to the public)?</legend>
                 <div class="choices">
-                    <label><input type="radio" name="b56-weekly" value="ASOC meeting"> ASOC meeting</label>
-                    <label><input type="radio" name="b56-weekly" value="Transfer workshop"> Transfer workshop</label>
+                    <label><input type="radio" name="b56-weekly" value="ASOC Senate Meeting"> ASOC meeting</label>
+                    <label><input type="radio" name="b56-weekly" value="MESA Transfer Workshop"> Transfer workshop</label>
                     <label><input type="radio" name="b56-weekly" value="Faculty Meeting"> Faculty Meeting</label>
-                    <label><input type="radio" name="b56-weekly" value="Secant Club meetings"> Secant Club meetings</label>
+                    <label><input type="radio" name="b56-weekly" value="Secant Club Meetings"> Secant Club meetings</label>
                 </div>
             </fieldset>
 
