--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <!-- Q5 -->
             <fieldset class="q">
-                <legend>5) What is held weekly in the big conference room in Ohlone Student Life (open to the public)?</legend>
+                <legend>5) What is held weekly in the big conference room in Ohlone Student Life, that is open to the public?</legend>
                 <div class="choices">
                     <label><input type="radio" name="b56-weekly" value="ASOC meeting"> ASOC Senate Meeting</label>
                     <label><input type="radio" name="b56-weekly" value="Transfer workshop"> MESA Transfer Workshop</label>
